--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -6,13 +6,15 @@
       "name": "Untitled0.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "private_outputs": true,
       "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -27,167 +29,57 @@
     },
     {
       "metadata": {
-        "id": "KimbO737JiA4",
+        "id": "UYcJ9WmWVf1a",
         "colab_type": "code",
-        "outputId": "cd99cb58-0c8b-444e-cfde-1e689af0c76e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 136
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "!pip3 install pytorch torchvision\n",
-        "!pip3 install pillow"
+        "# http://pytorch.org/\n",
+        "from os.path import exists\n",
+        "from wheel.pep425tags import get_abbr_impl, get_impl_ver, get_abi_tag\n",
+        "platform = '{}{}-{}'.format(get_abbr_impl(), get_impl_ver(), get_abi_tag())\n",
+        "cuda_output = !ldconfig -p|grep cudart.so|sed -e 's/.*\\.\\([0-9]*\\)\\.\\([0-9]*\\)$/cu\\1\\2/'\n",
+        "accelerator = cuda_output[0] if exists('/dev/nvidia0') else 'cpu'\n",
+        "\n",
+        "!pip install -q http://download.pytorch.org/whl/{accelerator}/torch-0.4.1-{platform}-linux_x86_64.whl torchvision\n",
+        "import torch"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\u001b[31mtorch-1.0.0-cp37-cp37m-linux_x86_64.whl is not a supported wheel on this platform.\u001b[0m\n",
-            "Requirement already satisfied: torchvision in /usr/local/lib/python3.6/dist-packages (0.2.1)\n",
-            "Requirement already satisfied: pillow>=4.1.1 in /usr/local/lib/python3.6/dist-packages (from torchvision) (5.3.0)\n",
-            "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from torchvision) (1.14.6)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from torchvision) (1.11.0)\n",
-            "Requirement already satisfied: torch in /usr/local/lib/python3.6/dist-packages (from torchvision) (1.0.0)\n",
-            "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (5.3.0)\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "PqdR5SZKWRZ8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!pip install Pillow==4.0.0\n",
+        "!pip install PIL\n",
+        "!pip install image"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "MtBrMDxUPaDx",
         "colab_type": "code",
-        "outputId": "4e8a75f7-58c0-49a7-ac16-657b6f7e6794",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "from glob import glob\n",
-        "glob('*')\n",
-        "\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "metadata": {
-        "id": "WzTDDW-eQHHk",
-        "colab_type": "code",
-        "outputId": "d44333c2-ce40-4010-d77e-e25aa923e178",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1292
-        }
-      },
-      "cell_type": "code",
-      "source": [
-        "!ls \"/content/gdrive/My Drive\""
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            " 1532519387773.jpg\n",
-            "'Andamento da Bolsa de Mestrado.gslides'\n",
-            "'ATA - Reunião 30 06 2017.gdoc'\n",
-            " cf_matrix_fendaprofunda.csv\n",
-            " cf_matrix_polvo.gsheet\n",
-            "'Clustering Indices correlation.gsheet'\n",
-            "'Clustering indices results.gsheet'\n",
-            " CMP102.gslides\n",
-            "'CMP234 Primeira Etapa.gdoc'\n",
-            "'CMP234 Trabalho 1.gdoc'\n",
-            "'Colab Notebooks'\n",
-            " conf_matrix.csv\n",
-            "'Curriculo Bruno.gdoc'\n",
-            "'Curriculo Lucas.gdoc'\n",
-            "'Curriculo Mae.gdoc'\n",
-            "'Curriculo Pai.gdoc'\n",
-            "'Curriculum Vitae-LUCAS PUGENS.ai'\n",
-            " dataset_analysis2018_03_27-14_44_52_feature_correlation.csv\n",
-            " dataset_analysis2018_03_27-14_53_23_metrics_correlation.csv\n",
-            " dataset_analysis2018_03_27-14_57_42_metrics_correlation.csv\n",
-            " dataset_analysis2018_03_27-16_46_53_metrics_correlation.csv\n",
-            "'dataset_analysis2018_04_11-10_51_25_metrics_correlation (1).csv'\n",
-            "'dataset_analysis2018_04_11-10_51_25_metrics_correlation (2).csv'\n",
-            " dataset_analysis2018_04_11-10_51_25_metrics_correlation.csv\n",
-            " dataset_analysis2018_04_11-10_51_25_metrics.csv\n",
-            " dissertacao.docx\n",
-            " dissertacao.gdoc\n",
-            " FORMATURA\n",
-            " gauss.pdf\n",
-            "'IFTTT button'\n",
-            " marlu.zip\n",
-            " mestrado\n",
-            "'minhas formatura'\n",
-            " modelagem.gslides\n",
-            "'Monthly budget.gsheet'\n",
-            "'New Text Document.txt.gdoc'\n",
-            " perfectviewer_data\n",
-            "'Play Books Notes'\n",
-            "'Project proposal.gdoc'\n",
-            "'reajuste aline.gdoc'\n",
-            "'relatorio 1 - CMP234.gdoc'\n",
-            "'S02 T01.gdoc'\n",
-            "'S02 T02.gdoc'\n",
-            "'S02 T03.gdoc'\n",
-            "'S02 T04.gdoc'\n",
-            "'S04 T01.gdoc'\n",
-            "'S04 T02.gdoc'\n",
-            "'S04 T03.gdoc'\n",
-            "'Sistemas de Tempo Real'\n",
-            "'Software development proposal.gdoc'\n",
-            "'survey ontology.gslides'\n",
-            " TCC\n",
-            " TheLeadingEdgeMarch2017Full.pdf\n",
-            "'tmp (10).csv'\n",
-            "'tmp (1).csv'\n",
-            "'tmp (2).csv'\n",
-            "'tmp (3).csv'\n",
-            "'tmp (4).csv'\n",
-            "'tmp (5).csv'\n",
-            "'tmp (6).csv'\n",
-            "'tmp (7).csv'\n",
-            "'tmp (8).csv'\n",
-            "'tmp (9).csv'\n",
-            " tmp.csv\n",
-            " tmp.gsheet\n",
-            "'Travel planner (1).gsheet'\n",
-            "'Travel planner.gsheet'\n",
-            "'Untitled Diagram.html'\n",
-            "'Untitled presentation (1).gslides'\n",
-            "'Untitled presentation.gslides'\n",
-            "'Untitled spreadsheet (1).gsheet'\n",
-            "'Untitled spreadsheet (2).gsheet'\n",
-            "'Untitled spreadsheet.gsheet'\n",
-            " UserFile.xlsx\n",
-            "'viagem chile com mozao.xlsx'\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "CMbTHQWdRMrX",
+        "id": "OrsGxt0ZWEQa",
         "colab_type": "code",
         "colab": {}
       },
@@ -208,11 +100,7 @@
       "metadata": {
         "id": "KjIClUfaJJ4V",
         "colab_type": "code",
-        "outputId": "abdd6bec-2f74-44ea-f360-5f543979d623",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 469
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -251,7 +139,7 @@
         "\n",
         "\n",
         "style_img = image_loader(data_path + \"images/simpsons.jpeg\")\n",
-        "content_img = image_loader(data_path +\" images/lucas.jpg\")\n",
+        "content_img = image_loader(data_path +\"images/lucas.jpg\")\n",
         "\n",
         "print(f'Style image size: {style_img.size()}')\n",
         "print(f'Content image size: {content_img.size()}')\n",
@@ -487,21 +375,7 @@
         "plt.show()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-e60288e9fe66>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m \u001b[0mstyle_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"images/simpsons.jpeg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m \u001b[0mcontent_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimage_loader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\" images/lucas.jpg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-5-e60288e9fe66>\u001b[0m in \u001b[0;36mimage_loader\u001b[0;34m(image_name)\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0;31m# fake batch dimension required to fit network's input dimensions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mloader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 32\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/cuda/__init__.py\u001b[0m in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    160\u001b[0m             \"Cannot re-initialize CUDA in forked subprocess. \" + msg)\n\u001b[1;32m    161\u001b[0m     \u001b[0m_check_driver\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 162\u001b[0;31m     \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_cuda_init\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    163\u001b[0m     \u001b[0m_cudart\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_load_cudart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    164\u001b[0m     \u001b[0m_cudart\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcudaGetErrorName\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrestype\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_char_p\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: cuda runtime error (30) : unknown error at /pytorch/aten/src/THC/THCGeneral.cpp:51"
-          ]
-        }
-      ]
+      "outputs": []
     }
   ]
 }
