--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -29,6 +29,19 @@
     },
     {
       "metadata": {
+        "id": "2sBv55DYY8rH",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!nvidia-smi"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
         "id": "UYcJ9WmWVf1a",
         "colab_type": "code",
         "colab": {}
@@ -117,8 +130,19 @@
         "import torchvision.transforms as transforms\n",
         "import torchvision.models as models\n",
         "\n",
-        "import copy\n",
-        "\n",
+        "import copy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "l-VVpF0OblRG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "data_path = '/content/gdrive/My Drive/Colab Notebooks/'\n",
         "\n",
         "device = torch.device(\"cuda\")  # if torch.cuda.is_available() else \"cpu\")\n",
@@ -128,9 +152,20 @@
         "\n",
         "loader = transforms.Compose([\n",
         "    transforms.Resize(imsize),  # scale imported image\n",
-        "    transforms.ToTensor()])  # transform it into a torch tensor\n",
-        "\n",
-        "\n",
+        "    transforms.CenterCrop(imsize),\n",
+        "    transforms.ToTensor()])  # transform it into a torch tensor\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "3E6NQLQYbofs",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def image_loader(image_name):\n",
         "    image = Image.open(image_name)\n",
         "    # fake batch dimension required to fit network's input dimensions\n",
@@ -138,8 +173,8 @@
         "    return image.to(device, torch.float)\n",
         "\n",
         "\n",
-        "style_img = image_loader(data_path + \"images/simpsons.jpeg\")\n",
-        "content_img = image_loader(data_path +\"images/lucas.jpg\")\n",
+        "style_img = image_loader(data_path + \"images/vangogh.jpg\")\n",
+        "content_img = image_loader(data_path +\"images/poring.jpg\")\n",
         "\n",
         "print(f'Style image size: {style_img.size()}')\n",
         "print(f'Content image size: {content_img.size()}')\n",
@@ -148,9 +183,19 @@
         "\n",
         "unloader = transforms.ToPILImage()  # reconvert into PIL image\n",
         "\n",
-        "plt.ion()\n",
-        "\n",
-        "\n",
+        "plt.ion()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "vFiNrOsSbqtT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def imshow(tensor, title=None):\n",
         "    image = tensor.cpu().clone()  # we clone the tensor to not do changes on it\n",
         "    image = image.squeeze(0)  # remove the fake batch dimension\n",
@@ -165,9 +210,19 @@
         "imshow(style_img, title='Style Image')\n",
         "\n",
         "plt.figure()\n",
-        "imshow(content_img, title='Content Image')\n",
-        "\n",
-        "\n",
+        "imshow(content_img, title='Content Image')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "8RVnoX23br_Z",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "class ContentLoss(nn.Module):\n",
         "\n",
         "    def __init__(self, target, ):\n",
@@ -180,9 +235,19 @@
         "\n",
         "    def forward(self, input):\n",
         "        self.loss = F.mse_loss(input, self.target)\n",
-        "        return input\n",
-        "\n",
-        "\n",
+        "        return input\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "newkBA8QbtzK",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def gram_matrix(input):\n",
         "    a, b, c, d = input.size()  # a=batch size(=1)\n",
         "    # b=number of feature maps\n",
@@ -194,9 +259,19 @@
         "\n",
         "    # we 'normalize' the values of the gram matrix\n",
         "    # by dividing by the number of element in each feature maps.\n",
-        "    return G.div(a * b * c * d)\n",
-        "\n",
-        "\n",
+        "    return G.div(a * b * c * d)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "fFc6Tn7_bvqT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "class StyleLoss(nn.Module):\n",
         "\n",
         "    def __init__(self, target_feature):\n",
@@ -206,15 +281,35 @@
         "    def forward(self, input):\n",
         "        G = gram_matrix(input)\n",
         "        self.loss = F.mse_loss(G, self.target)\n",
-        "        return input\n",
-        "\n",
-        "\n",
+        "        return input\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "ZNcIpZkFbxJE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "cnn = models.vgg19(pretrained=True).features.to(device).eval()\n",
         "\n",
         "cnn_normalization_mean = torch.tensor([0.485, 0.456, 0.406]).to(device)\n",
-        "cnn_normalization_std = torch.tensor([0.229, 0.224, 0.225]).to(device)\n",
-        "\n",
-        "\n",
+        "cnn_normalization_std = torch.tensor([0.229, 0.224, 0.225]).to(device)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "pv41T-1Obyk8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "# create a module to normalize input image so we can easily put it in a\n",
         "# nn.Sequential\n",
         "class Normalization(nn.Module):\n",
@@ -228,14 +323,34 @@
         "\n",
         "    def forward(self, img):\n",
         "        # normalize img\n",
-        "        return (img - self.mean) / self.std\n",
-        "\n",
-        "\n",
+        "        return (img - self.mean) / self.std\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "Ux_ARZ_jbz_s",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "# desired depth layers to compute style/content losses :\n",
         "content_layers_default = ['conv_4']\n",
-        "style_layers_default = ['conv_1', 'conv_2', 'conv_3', 'conv_4', 'conv_5']\n",
-        "\n",
-        "\n",
+        "style_layers_default = ['conv_1', 'conv_2', 'conv_3', 'conv_4', 'conv_5']\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "FxbDm-1Cb2R-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def get_style_model_and_losses(cnn, normalization_mean, normalization_std,\n",
         "                               style_img, content_img,\n",
         "                               content_layers=content_layers_default,\n",
@@ -295,24 +410,54 @@
         "\n",
         "    model = model[:(i + 1)]\n",
         "\n",
-        "    return model, style_losses, content_losses\n",
-        "\n",
-        "\n",
+        "    return model, style_losses, content_losses\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "zZrzjQzEb4E4",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "input_img = content_img.clone()\n",
         "# if you want to use white noise instead uncomment the below line:\n",
         "# input_img = torch.randn(content_img.data.size(), device=device)\n",
         "\n",
         "# add the original input image to the figure:\n",
         "plt.figure()\n",
-        "imshow(input_img, title='Input Image')\n",
-        "\n",
-        "\n",
+        "imshow(input_img, title='Input Image')\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "WPCZedA7b5mG",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def get_input_optimizer(input_img):\n",
         "    # this line to show that input is a parameter that requires a gradient\n",
         "    optimizer = optim.LBFGS([input_img.requires_grad_()])\n",
-        "    return optimizer\n",
-        "\n",
-        "\n",
+        "    return optimizer\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "rGh2mUnQb6rZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "def run_style_transfer(cnn, normalization_mean, normalization_std,\n",
         "                       content_img, style_img, input_img, num_steps=300,\n",
         "                       style_weight=100000, content_weight=10):\n",
@@ -361,9 +506,19 @@
         "    # a last correction...\n",
         "    input_img.data.clamp_(0, 1)\n",
         "\n",
-        "    return input_img\n",
-        "\n",
-        "\n",
+        "    return input_img\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "MfP5Kp_yb8l7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         "output = run_style_transfer(cnn, cnn_normalization_mean, cnn_normalization_std,\n",
         "                            content_img, style_img, input_img)\n",
         "\n",
