--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled0.ipynb",
+      "name": "pytorch.ipynb",
       "version": "0.3.2",
       "provenance": [],
       "private_outputs": true,
@@ -129,6 +129,7 @@
         "\n",
         "import torchvision.transforms as transforms\n",
         "import torchvision.models as models\n",
+        "from torchvision.utils import save_image\n",
         "\n",
         "import copy"
       ],
@@ -459,8 +460,8 @@
       "cell_type": "code",
       "source": [
         "def run_style_transfer(cnn, normalization_mean, normalization_std,\n",
-        "                       content_img, style_img, input_img, num_steps=300,\n",
-        "                       style_weight=100000, content_weight=10):\n",
+        "                       content_img, style_img, input_img, num_steps=600,\n",
+        "                       style_weight=1000000, content_weight=1):\n",
         "    \"\"\"Run the style transfer.\"\"\"\n",
         "    print('Building the style transfer model..')\n",
         "    model, style_losses, content_losses = get_style_model_and_losses(cnn,\n",
@@ -528,6 +529,19 @@
         "# sphinx_gallery_thumbnail_number = 4\n",
         "plt.ioff()\n",
         "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "jq-VWZ6hgSXS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "save_image(output, data_path+'out_image.jpg')"
       ],
       "execution_count": 0,
       "outputs": []
